# cheap-api

./: .gitignore  README.md
.github/workflows/: ci.yml  node-publish.yml  python-publish.yml
cheap-api-core/: Cargo.toml
cheap-api-core/src/: bindings.rs  error.rs  hasher.rs  interceptor.rs  lib.rs  mongo_adapter.rs  store.rs
cheap-api-node/: index.d.ts  index.js  package-lock.json  package.json  sdk.js  test_gemini.js
cheap-api-python/: Cargo.toml  README.md  pyproject.toml  test_gemini.py
cheap-api-python/cheap_api/: __init__.py
cheap-api-python/src/: lib.rs
