[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cheap-api"
version = "0.1.4"
description = "A blazing fast API caching SDK powered by Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["api", "cache", "sdk", "rust", "llm"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests",
    "httpx"
]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
module-name = "cheap_api._core"
